deployment/ui/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ui
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: ui:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
            name: http
        resources:
          requests:
            memory: "10Mi"
          limits:
            memory: "50Mi"
